--- a/nutrition/templates/nutrition/header.html
+++ b/nutrition/templates/nutrition/header.html
@@ -12,13 +12,13 @@
       <ul
         tabindex="0"
         class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-        <li>
+        <!-- <li>
           <a class="justify-between">
             Profile
             <span class="badge">New</span>
           </a>
-        </li>
-        <li><a>Settings</a></li>
+        </li> -->
+        <li><a href="{% url 'user_preferences' %}">Preferences</a></li>
         <li>
           <form method="POST" action="{% url 'logout' %}" id="logout-form" style="display:inline;">
             {% csrf_token %}
