added user-selectable standard daisyui themes

--- a/nutrition/templates/nutrition/user-preferences.html
+++ b/nutrition/templates/nutrition/user-preferences.html
@@ -12,4 +12,11 @@
         </label>
         <div>{{ form.max_calories }}</div>
     </div>
+    <!-- theme field -->
+    <div class="form-control">
+        <label class="label">
+            <span class="label-text">Theme</span>
+        </label>
+        <div>{{ form.theme }}</div>
+    </div>
 {% endblock %}
