--- a/nutrition/templates/nutrition/base-form.html
+++ b/nutrition/templates/nutrition/base-form.html
@@ -1,14 +1,14 @@
 {% extends 'nutrition/base.html' %}
 
 {% block content %}
-<div class="flex justify-center items-center min-h-screen bg-gray-100">
+<div class="flex justify-center items-center min-h-screen">
     <div class="w-full max-w-md lg:w-1/3 mx-auto">
 
         <!-- Form Container -->
-      <div class="shadow-lg rounded-lg overflow-hidden bg-white">
+      <div class="shadow-lg rounded-lg overflow-hidden bg-base-300">
         
-        <!-- Blue Bar at the Top -->
-        <div class="bg-blue-500 text-white p-4 text-center">
+        <!-- Bar at the Top -->
+        <div class="bg-primary text-primary-content p-4 text-center">
           <h2 class="text-lg font-bold">{% block title %}title{% endblock %}</h2>
         </div>
   
