--- a/nutrition/templates/nutrition/header.html
+++ b/nutrition/templates/nutrition/header.html
@@ -1,4 +1,4 @@
-<div class="navbar bg-base-100">
+<div class="navbar">
 
   <div class="flex-1">
     <a class="btn btn-ghost text-xl" href="{% url 'days' %}">Nutrition</a>
