--- a/nutrition/templates/nutrition/login.html
+++ b/nutrition/templates/nutrition/login.html
@@ -3,14 +3,14 @@
 {% block title %}Nutrition Login{% endblock %}
 
 {% block body_content %}
-<div class="flex justify-center items-center min-h-screen bg-gray-100">
+<div class="flex justify-center items-center min-h-screen">
     <div class="w-full max-w-md lg:w-1/3 mx-auto">
 
         <!-- Form Container -->
-      <div class="shadow-lg rounded-lg overflow-hidden bg-white">
+      <div class="bg-base-300 shadow-lg rounded-lg overflow-hidden">
         
         <!-- Blue Bar at the Top -->
-        <div class="bg-blue-500 text-white p-4 text-center">
+        <div class="bg-primary text-primary-content p-4 text-center">
           <h2 class="text-lg font-bold">Nutrition Login</h2>
         </div>
   
@@ -49,7 +49,7 @@
             <!-- Submit Button -->
             <div class="form-control mt-6">
                 <div class="col-span-2 text-center">
-                    <button type="submit" class="btn btn-primary w-full">Nutrition Login</button>
+                    <button type="submit" class="btn btn-primary w-full">Login</button>
                 </div>
             </div>
             
