make heading like the other pages

--- a/nutrition/templates/nutrition/days-table.html
+++ b/nutrition/templates/nutrition/days-table.html
@@ -6,10 +6,14 @@
 </script>
 
 <div class="container mx-auto mt-10">
-    <h1 class="text-2xl font-bold mb-4">Calories Calendar (Table)</h1>
+    <div class="overflow-x-auto nutrition days">
 
-    <div class="overflow-x-auto">
-        <table class="nutrition days">
+        <!-- Bar at the Top -->
+        <div class="bg-primary text-primary-content p-4 text-center">
+            <h2 class="text-lg font-bold">Calories Calendar (Table)</h2>
+        </div>
+
+        <table>
             <thead>
                 <tr>
                     <th>Food</th>
