label on all form buttons is "Save"

--- a/nutrition/templates/nutrition/base-form.html
+++ b/nutrition/templates/nutrition/base-form.html
@@ -33,7 +33,7 @@
             <!-- Submit Button -->
             <div class="form-control mt-6">
                 <div class="col-span-2 text-center">
-                    <button type="submit" class="btn btn-primary w-full">{% block button_label %}{% endblock %}</button>
+                    <button type="submit" class="btn btn-primary w-full">Save</button>
                 </div>
             </div>
             
