added foods class

--- a/nutrition/templates/nutrition/foods.html
+++ b/nutrition/templates/nutrition/foods.html
@@ -6,15 +6,14 @@
 
 <div class="container mx-auto mt-10">
 
-    <!-- <div class="overflow-x-auto nutrition foods"> -->
-    <div class="overflow-x-auto nutrition days">
+    <div class="overflow-x-auto nutrition foods">
 
         <!-- Bar at the Top -->
         <div class="bg-primary text-primary-content p-4 text-center">
             <h2 class="text-lg font-bold">Manage Foods</h2>
         </div>
         
-        <table class="nutrition days">
+        <table>
             <thead>
                 <tr>
                     <th>Name</th>
