--- a/nutrition/templates/nutrition/days-table.html
+++ b/nutrition/templates/nutrition/days-table.html
@@ -41,5 +41,5 @@
             </tbody>
         </table>
     </div>
-    <a href="{% url 'add_portion' %}" class="text-blue-500 underline">New Portion</a>
+    <a href="{% url 'add_or_edit_portion' %}" class="text-blue-500 underline">New Portion</a>
 </div>
