added link to /foods in menu

--- a/nutrition/templates/nutrition/header.html
+++ b/nutrition/templates/nutrition/header.html
@@ -18,6 +18,7 @@
             <span class="badge">New</span>
           </a>
         </li> -->
+        <li><a href="{% url 'foods' %}">Manage Foods</a></li>
         <li><a href="{% url 'user_preferences' %}">Preferences</a></li>
         <li>
           <form method="POST" action="{% url 'logout' %}" id="logout-form" style="display:inline;">
