renamed nutrition package to django_nutrition

--- a/django-nutrition/django_nutrition/templates/django_nutrition/add_portion.html
+++ b/django-nutrition/django_nutrition/templates/django_nutrition/add_portion.html
@@ -1,4 +1,4 @@
-{% extends 'nutrition/base-form.html' %}
+{% extends 'django_nutrition/base-form.html' %}
 
 {% block title %}New Portion{% endblock %}
 
