--- a/django-nutrition/django_nutrition/templates/django_nutrition/base.html
+++ b/django-nutrition/django_nutrition/templates/django_nutrition/base.html
@@ -1,9 +1,9 @@
-{% extends 'nutrition/base-simple.html' %}
+{% extends 'django_nutrition/base-simple.html' %}
 
 
 {% block body_content %}
   <header>
-{% include 'nutrition/header.html' %}
+{% include 'django_nutrition/header.html' %}
   </header>
   <main>
 {% block content %}{% endblock %}
