--- a/django-nutrition/django_nutrition/templates/django_nutrition/login.html
+++ b/django-nutrition/django_nutrition/templates/django_nutrition/login.html
@@ -1,4 +1,4 @@
-{% extends 'nutrition/base-simple.html' %}
+{% extends 'django_nutrition/base-simple.html' %}
 
 {% block title %}Nutrition Login{% endblock %}
 
