--- a/django-nutrition/django_nutrition/templates/django_nutrition/base-form.html
+++ b/django-nutrition/django_nutrition/templates/django_nutrition/base-form.html
@@ -1,4 +1,4 @@
-{% extends 'nutrition/base.html' %}
+{% extends 'django_nutrition/base.html' %}
 
 {% block content %}
 <div class="flex justify-center items-center min-h-screen">
