--- a/django-nutrition/django_nutrition/templates/django_nutrition/days-table.html
+++ b/django-nutrition/django_nutrition/templates/django_nutrition/days-table.html
@@ -33,7 +33,7 @@
                 <tr id="subtable-{{ d.date }}" class="hidden">
                     <td colspan="3">
                         <div class="overflow-x-auto">
-                            {% include 'nutrition/meals.html' with meals=d.meals %}
+                            {% include 'django_nutrition/meals.html' with meals=d.meals %}
                         </div>
                     </td>
                 </tr>
