added notes to portion details table

--- a/django_nutrition/templates/django_nutrition/portions.html
+++ b/django_nutrition/templates/django_nutrition/portions.html
@@ -4,6 +4,7 @@
             <th class="px-4 py-2">Food</th>
             <th class="px-4 py-2">Quantity</th>
             <th class="px-4 py-2">Calories</th>
+            <th class="px-4 py-2">Notes</th>
             <th></th>
             <th></th>
         </tr>
@@ -14,6 +15,7 @@
             <td class="px-4 py-2">{{ p.food.name }}</td>
             <td class="px-4 py-2">{{ p.quantity }}</td>
             <td class="px-4 py-2">{{ p.calories_rounded_01 }}</td>
+            <td class="px-4 py-2">{{ p.note }}</td>
             <td>
                 <a href="{% url 'add_or_edit_portion' p.pk %}"class="text-blue-500 underline">Edit</a>
             </td>
